--- a/WDD-130/ICE/W04_ICE.html
+++ b/WDD-130/ICE/W04_ICE.html
@@ -16,10 +16,10 @@
         </section>
         <section>
             <ol>
-                <li>Faith in the Lord Jesus Christ</li>
-                <li>Repentance</li>
-                <li>Baptism by immersion for the remission of sins</li>
-                <li>Laying on of hands for the gift of the Holy Ghost</li>
+                <p class="list">1. Faith in the Lord Jesus Christ</p>
+                <p class="list">2. Repentance</p>
+                <p class="list">3. Baptism by immersion for the remission of sins</p>
+                <p class="list">4. Laying on of hands for the gift of the Holy Ghost</p>
             </ol>
         </section>
         <img id="President Nelson" src="Images/president_nelson.jpeg" alt="President Nelson Smiling">
