--- a/WDD-130/WWR/index.html
+++ b/WDD-130/WWR/index.html
@@ -57,18 +57,18 @@
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 2024 - Truman Bahouth</p>
+            <p>Dry Oar © 2024 - Truman Bahouth</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="Images/facebook.png" alt="fb icon">
+                    <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="Images/twitter.png" alt="twitter icon">
+                    <img src="images/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="Images/instagram.png" alt="instagram icon">
+                    <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
