--- a/WDD-130/WWR/index.html
+++ b/WDD-130/WWR/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
     <link rel="stylesheet" href="Style/style.css">
@@ -22,13 +21,13 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero.img" src="Images/hero.png" alt="People enjoying white water rafting">
+                <img id="hero-img" src="Images/hero.png" alt="People enjoying white water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have an Adventure</h1>
                 <h4>Make Memoires with Dry Oar</h4>
                 <div class="button-box">
-                    <a class="book" href="contactus.html"></a>
+                    <a class="book" href="contactus.html">Book Now</a>
                 </div>
             </section>
         </div>
