updating personal website and rafting website

--- a/WDD-130/Workout Website/site-plan.html
+++ b/WDD-130/Workout Website/site-plan.html
@@ -83,9 +83,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="home-page.html">Home</a>
+        <a href="growth-charts.html">Page2</a>
+        <a href="bmi-energy.html">Page3</a>
       </nav>
       <hr>
       <h2>
@@ -96,10 +96,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Growth Charts <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          BMI/Energy Calculators  <!-- change this -->
         </div>
 
         <div class="top">
@@ -121,29 +121,35 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Overview
+          This website is aimed to help people learn how to workout, keep those commited souls to staying fit, and providing more information about the exercise they are doing and how it affects their body.
+        Our purpose
+          Our purpose is to bring reliable, accurate, and easy to read information about working out that will help new and returning gym goers to understand more about how working out is beneficial to the body and mind.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="Images/deadlift.jpg" alt="Deadlifting 1,102 lbs by Eddie Hall">
+        <img src="Images/weight_plates.webp" alt="Weights">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Growth Charts</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Example of graphs you might see
+          Here is an example of a graph that is showing how the graph will look inside this website. As you can see, it is very easy to understand and can quickly see the progress that his person has made while working out and using this app.
+          You can also choose what type of graph based on your preferences as you can see below.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="Images/Line Graph.png" alt="Example of Line Graph">
+        <img src="Images/Bar Graph.png" alt="Example of Bar Graph">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>BMI/Energy Calculators</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Calculator
+          These are more exmaples of different type of calculators you might see within this website. These different calculators help you undestand your body and what you might need to eat in order to hit your goals.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="Images/bmi.png" alt="BMI Calculator">
+        <img src="Images/basal.png" alt="Nutrition Calculator">
 
       </ul>
       <hr>
