updating website pages and css and javascript

--- a/WDD-130/Workout Website/growth-charts.html
+++ b/WDD-130/Workout Website/growth-charts.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Growth Charts - GhostGrip Fitness</title>
+  <link rel="stylesheet" href="styles/personal-website.css">
 </head>
+
 <body>
-    
+  <header>
+    <h1>GhostGrip Fitness</h1>
+    <h2>Growth Charts</h2>
+  </header>
+
+  <nav>
+    <a href="home-page.html">Home</a>
+    <a href="growth-charts.html" class="active">Growth Charts</a>
+    <a href="bmi-energy.html">BMI/Energy Calculators</a>
+    <a href="request-page.html">Request Trainer</a>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Growth Charts Overview</h2>
+      <p>Our growth charts help users track their progress over time with clear, easy-to-read visualizations. These charts offer insight into how your workouts are impacting your strength and fitness journey.</p>
+    </section>
+
+    <section>
+      <h2>Chart Examples</h2>
+      <p>Below are examples of the types of graphs you might see on our website:</p>
+      <div class="chart-container">
+        <figure>
+          <img src="images/Line Graph.png" alt="Example of Line Graph">
+          <figcaption>Example Line Graph - Visualizing strength progress.</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Bar Graph.png" alt="Example of Bar Graph">
+          <figcaption>Example Bar Graph - Comparing workout performance over time.</figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <section>
+      <h2>Why Use Growth Charts?</h2>
+      <p>Growth charts provide motivation and measurable progress. By visualizing your strength improvements, you can set realistic goals and stay consistent in your fitness journey.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 GhostGrip Fitness. All Rights Reserved.</p>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="Facebook Icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="Twitter Icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="Instagram Icon">
+        </a>
+    </div>
+</footer>
 </body>
+
 </html>
