--- a/WDD-130/Workout Website/bmi-energy.html
+++ b/WDD-130/Workout Website/bmi-energy.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculators - GhostGrip Fitness</title>
+  <link rel="stylesheet" href="styles/personal-website.css">
 </head>
+
 <body>
+  <header>
+    <h1>GhostGrip Fitness</h1>
+    <h2>BMI/Energy Calculators</h2>
+  </header>
+
+  <nav>
+    <a href="home-page.html">Home</a>
+    <a href="growth-charts.html">Growth Charts</a>
+    <a href="bmi-energy.html" class="active">BMI/Energy Calculators</a>
+    <a href="request-page.html">Request Trainer</a>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Calculator Overview</h2>
+      <p>Our calculators help you better understand your body and make informed decisions to reach your fitness goals. Use these tools to estimate your BMI and daily energy needs.</p>
+    </section>
+
+    <section>
+      <h2>Calculators</h2>
+      <div class="calculator-container">
+        <!-- BMI Calculator -->
+        <div class="calculator">
+          <h3>BMI Calculator</h3>
+          <label for="bmi-weight">Weight (lbs):</label>
+          <input type="number" id="bmi-weight" placeholder="Enter weight in lbs">
+          <label for="bmi-feet">Height (feet):</label>
+          <input type="number" id="bmi-feet" placeholder="Enter height in feet">
+          <label for="bmi-inches">Height (inches):</label>
+          <input type="number" id="bmi-inches" placeholder="Enter height in inches">
+          <label for="bmi-gender">Gender:</label>
+          <select id="bmi-gender">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+          <button onclick="calculateBMI()">Calculate BMI</button>
+          <p id="bmi-result"></p>
+        </div>
     
+        <!-- Energy Calculator -->
+        <div class="calculator">
+          <h3>Energy Calculator</h3>
+          <label for="energy-weight">Weight (lbs):</label>
+          <input type="number" id="energy-weight" placeholder="Enter weight in lbs">
+          <label for="energy-feet">Height (feet):</label>
+          <input type="number" id="energy-feet" placeholder="Enter height in feet">
+          <label for="energy-inches">Height (inches):</label>
+          <input type="number" id="energy-inches" placeholder="Enter height in inches">
+          <label for="energy-age">Age (years):</label>
+          <input type="number" id="energy-age" placeholder="Enter age in years">
+          <label for="energy-gender">Gender:</label>
+          <select id="energy-gender">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+          <label for="energy-activity">Activity Level:</label>
+          <select id="energy-activity">
+            <option value="1.2">Sedentary</option>
+            <option value="1.375">Lightly Active</option>
+            <option value="1.55">Moderately Active</option>
+            <option value="1.725">Very Active</option>
+          </select>
+          <button onclick="calculateEnergy()">Calculate Daily Calorie Needs</button>
+          <p id="energy-result"></p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 GhostGrip Fitness. All Rights Reserved.</p>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="Facebook Icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="Twitter Icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="Instagram Icon">
+        </a>
+    </div>
+</footer>
+
+  <!-- Link to your JavaScript file -->
+  <script src="scripts/calculators.js"></script>
 </body>
+
 </html>
