--- a/WDD-130/Workout Website/home-page.html
+++ b/WDD-130/Workout Website/home-page.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GhostGrip Fitness</title>
+  <link rel="stylesheet" href="styles/personal-website.css">
 </head>
+
 <body>
-    
+  <header>
+    <h1>GhostGrip Fitness</h1>
+    <h2>Truman Bahouth</h2>
+  </header>
+
+  <nav>
+    <a href="home-page.html" class="active">Home</a>
+    <a href="growth-charts.html">Growth Charts</a>
+    <a href="bmi-energy.html">BMI/Energy Calculators</a>
+    <a href="request-page.html">Request Trainer</a>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Overview</h2>
+      <h3>Purpose</h3>
+      <p>Our purpose is to create an easy-to-use workout website that provides users with workouts and real-time graphs to track their strength over time.</p>
+
+      <h3>Audience</h3>
+      <p>The audience includes beginners, fitness enthusiasts, and athletes looking for personalized workout guidance.</p>
+    </section>
+
+    <section>
+      <h2>Branding</h2>
+      <h3>Website Logo</h3>
+      <img src="images/GhostGrip.png" alt="GhostGrip Logo">
+    </section>
+
+    <section>
+      <h2>Content</h2>
+      <h3>Home Page</h3>
+      <p>This website aims to help people learn how to work out, stay fit, and understand the benefits of exercise on the body and mind.</p>
+      <section class="home-hero">
+  <img src="Images/deadlift.jpg" alt="Deadlifting 1,102 lbs by Eddie Hall">
+  <h2>Overview</h2>
+</section>
+      <img src="images/weight_plates.webp" alt="Weight plates">
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 GhostGrip Fitness. All Rights Reserved.</p>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="Facebook Icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="Twitter Icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="Instagram Icon">
+        </a>
+    </div>
+</footer>
 </body>
+
 </html>
