fixing href and src

--- a/WDD-130/Workout Website/home-page.html
+++ b/WDD-130/Workout Website/home-page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GhostGrip Fitness</title>
-  <link rel="stylesheet" href="styles/personal-website.css">
+  <link rel="stylesheet" href="Styles/personal-website.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <section>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="images/GhostGrip.png" alt="GhostGrip Logo">
+      <img src="Images/GhostGrip.png" alt="GhostGrip Logo">
     </section>
 
     <section>
@@ -45,7 +45,7 @@
   <img src="Images/deadlift.jpg" alt="Deadlifting 1,102 lbs by Eddie Hall">
   <h2>Overview</h2>
 </section>
-      <img src="images/weight_plates.webp" alt="Weight plates">
+      <img src="Images/weight_plates.webp" alt="Weight plates">
     </section>
   </main>
 
@@ -53,13 +53,13 @@
     <p>&copy; 2024 GhostGrip Fitness. All Rights Reserved.</p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="Facebook Icon">
+            <img src="Images/facebook.png" alt="Facebook Icon">
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="Twitter Icon">
+            <img src="Images/twitter.png" alt="Twitter Icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="Instagram Icon">
+            <img src="Images/instagram.png" alt="Instagram Icon">
         </a>
         <a href="site-plan.html">Site Plan</a>
     </div>
