--- a/WDD-130/Workout Website/growth-charts.html
+++ b/WDD-130/Workout Website/growth-charts.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Growth Charts - GhostGrip Fitness</title>
-  <link rel="stylesheet" href="styles/personal-website.css">
+  <link rel="stylesheet" href="Styles/personal-website.css">
 </head>
 
 <body>
@@ -32,11 +32,11 @@
       <p>Below are examples of the types of graphs you might see on our website:</p>
       <div class="chart-container">
         <figure>
-          <img src="images/Line Graph.png" alt="Example of Line Graph">
+          <img src="Images/Line Graph.png" alt="Example of Line Graph">
           <figcaption>Example Line Graph - Visualizing strength progress.</figcaption>
         </figure>
         <figure>
-          <img src="images/Bar Graph.png" alt="Example of Bar Graph">
+          <img src="Images/Bar Graph.png" alt="Example of Bar Graph">
           <figcaption>Example Bar Graph - Comparing workout performance over time.</figcaption>
         </figure>
       </div>
@@ -52,13 +52,13 @@
     <p>&copy; 2024 GhostGrip Fitness. All Rights Reserved.</p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="Facebook Icon">
+            <img src="Images/facebook.png" alt="Facebook Icon">
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="Twitter Icon">
+            <img src="Images/twitter.png" alt="Twitter Icon">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="Instagram Icon">
+            <img src="Images/instagram.png" alt="Instagram Icon">
         </a>
     </div>
 </footer>
