fixing home page and then added more images

--- a/WDD-130/Workout Website/home-page.html
+++ b/WDD-130/Workout Website/home-page.html
@@ -23,12 +23,14 @@
 
   <main>
     <section>
-      <h2>Overview</h2>
-      <h3>Purpose</h3>
-      <p>Our purpose is to create an easy-to-use workout website that provides users with workouts and real-time graphs to track their strength over time.</p>
+      <section class="home-hero">
+        <img src="Images/deadlift.jpg" alt="Deadlifting 1,102 lbs by Eddie Hall">
+        <h2>Welcome</h2>
+    </section>
 
-      <h3>Audience</h3>
-      <p>The audience includes beginners, fitness enthusiasts, and athletes looking for personalized workout guidance.</p>
+    <section>
+      <h2>Purpose</h2>
+      <p>Our purpose is to create an easy-to-use workout website that provides users with workouts and real-time graphs to track their strength over time.</p>
     </section>
 
     <section>
@@ -37,14 +39,6 @@
       <img src="Images/GhostGrip.png" alt="GhostGrip Logo">
     </section>
 
-    <section>
-      <h2>Content</h2>
-      <h3>Home Page</h3>
-      <p>This website aims to help people learn how to work out, stay fit, and understand the benefits of exercise on the body and mind.</p>
-      <section class="home-hero">
-  <img src="Images/deadlift.jpg" alt="Deadlifting 1,102 lbs by Eddie Hall">
-  <h2>Overview</h2>
-</section>
       <img src="Images/weight_plates.webp" alt="Weight plates">
     </section>
   </main>
