adding logos to the header

--- a/WDD-130/Workout Website/home-page.html
+++ b/WDD-130/Workout Website/home-page.html
@@ -10,8 +10,13 @@
 
 <body>
   <header>
+    <div class="logo-left">
+      <img src="Images/only-logo-left.png" alt="GhostGrip Logo">
+    </div>
+    <div class="logo-right">
+      <img src="Images/only-logo-right.png" alt="GhostGrip Logo">
+    </div>
     <h1>GhostGrip Fitness</h1>
-    <h2>Truman Bahouth</h2>
   </header>
 
   <nav>
@@ -29,8 +34,8 @@
     </section>
 
     <section>
-      <h2>Purpose</h2>
-      <p>Our purpose is to create an easy-to-use workout website that provides users with workouts and real-time graphs to track their strength over time.</p>
+      <h2 class="purpose-h">Purpose</h2>
+      <p class="purpose-p">Our purpose is to create an easy-to-use workout website that provides users with workouts and real-time graphs to track their strength over time.</p>
     </section>
 
     <section>
