--- a/WDD-130/Workout Website/bmi-energy.html
+++ b/WDD-130/Workout Website/bmi-energy.html
@@ -10,8 +10,13 @@
 
 <body>
   <header>
+    <div class="logo-left">
+      <img src="Images/only-logo-left.png" alt="GhostGrip Logo">
+    </div>
+    <div class="logo-right">
+      <img src="Images/only-logo-right.png" alt="GhostGrip Logo">
+    </div>
     <h1>GhostGrip Fitness</h1>
-    <h2>BMI/Energy Calculators</h2>
   </header>
 
   <nav>
