--- a/WDD-130/Workout Website/bmi-energy.html
+++ b/WDD-130/Workout Website/bmi-energy.html
@@ -75,10 +75,10 @@
           </select>
           <label for="energy-activity">Activity Level:</label>
           <select id="energy-activity">
-            <option value="1.2">Sedentary</option>
-            <option value="1.375">Lightly Active</option>
-            <option value="1.55">Moderately Active</option>
-            <option value="1.725">Very Active</option>
+            <option value="1.2">Sedentary (0-1 workouts a week)</option>
+            <option value="1.375">Lightly Active (2-3 workouts a week)</option>
+            <option value="1.55">Moderately Active (4-5 workouts a week)</option>
+            <option value="1.725">Very Active (6-7 workouts a week)</option>
           </select>
           <button onclick="calculateEnergy()">Calculate Daily Calorie Needs</button>
 
@@ -106,7 +106,7 @@
     </div>
   </footer>
 
-  <script src="scripts/calculators.js"></script>
+  <script src="Scripts/calculators.js"></script>
 </body>
 
 </html>
