--- a/WDD-130/Workout Website/home-page.html
+++ b/WDD-130/Workout Website/home-page.html
@@ -30,21 +30,16 @@
     <section>
       <section class="home-hero">
         <img src="Images/deadlift.jpg" alt="Deadlifting 1,102 lbs by Eddie Hall">
-        <h2>Welcome</h2>
+        <h2>Welcome To GhostGrip</h2>
     </section>
 
     <section>
       <h2 class="purpose-h">Purpose</h2>
       <p class="purpose-p">Our purpose is to create an easy-to-use workout website that provides users with workouts and real-time graphs to track their strength over time.</p>
     </section>
-
-    <section>
-      <h2>Branding</h2>
-      <h3>Website Logo</h3>
-      <img src="Images/GhostGrip.png" alt="GhostGrip Logo">
-    </section>
-
-      <img src="Images/weight_plates.webp" alt="Weight plates">
+    <section class="olympic-container">
+      <img class="olympic-img" src="Images/Olympic 2.webp" alt="Weight plates">
+      <p class="overlay-olympic">Working out will make you feel like one of the best. Each person is different so never compare yourself to someone else and keep pushing forward.</p>
     </section>
   </main>
 
