--- a/WDD-130/Happy Birthday/main.html
+++ b/WDD-130/Happy Birthday/main.html
@@ -76,6 +76,9 @@
             <div class="flower"><div class="petal petal-1"></div><div class="petal petal-2"></div><div class="petal petal-3"></div><div class="petal petal-4"></div><div class="stem"></div></div>
         </div>
 
+        <!-- Grass Layer -->
+        <div class="grass"></div>
+
         <!-- Ground -->
         <div class="ground"></div>
     </div>
