touching up spacing and adding "Happy Birthday"

--- a/WDD-130/Happy Birthday/main.html
+++ b/WDD-130/Happy Birthday/main.html
@@ -81,6 +81,12 @@
 
         <!-- Ground -->
         <div class="ground"></div>
+
+        <!-- Happy Birthday Text -->
+        <div class="happy-birthday-container">
+            <div class="happy">HAPPY</div>
+            <div class="birthday">BIRTHDAY</div>
+        </div>
     </div>
 
     <script>
